--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ plugins {
 }
 
 group 'io.github.betterclient'
-version '1.0-SNAPSHOT'
+version '1.0'
+sourceCompatibility = targetCompatibility = 17
 
 repositories {
     mavenCentral()
